# CuraEngine

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  Makefile  win_clean.bat  win_cmake.bat  win_make.bat
src/: Application.cpp  FffGcodeWriter.cpp  FffGcodeWriter.h  FffProcessor.h  SkeletalTrapezoidation.cpp  SkeletalTrapezoidation.h  WallToolPaths.cpp  WallToolPaths.h  WallsComputation.cpp  comb.cpp  comb.h  fffProcessor.h  gcodeExport.cpp  gcodeExport.h  infill.cpp  infill.h  main.cpp  optimizedModel.cpp  settings.cpp  settings.h  skin.cpp  sliceDataStorage.h  support.cpp  support.h  timeEstimate.cpp
src/modelFile/: modelFile.cpp
src/utils/: floatpoint.h  intpoint.h  polygon.cpp  polygon.h  socket.cpp
